# barca

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DATASTAR_REFERENCE.md  Justfile  LICENSE  README.md  barca.allium  barca.toml  cliff.toml  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  prek.toml  pyproject.toml  tailwind.config.js
.cursor/: worktrees.json
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  RESULTS.md  run_all.sh
benchmarks/barca_bench/: bench.py  bench_cold_start.py  bench_concurrent_init.py  bench_library.py  bench_pickup.py  bench_server.py  bench_spaceflights.py  bench_trivial.py  pyproject.toml
benchmarks/barca_bench/bench_project/: assets.py  spaceflights.py  trivial_assets.py
benchmarks/chain_100/: bench.sh
benchmarks/collect_fan_in/: bench.sh
benchmarks/dagster_bench/: bench.py  bench_cold_start.py  bench_concurrent_init.py  bench_server.py  bench_spaceflights.py  bench_trivial.py  pyproject.toml
benchmarks/deep_diamond/: bench.sh
benchmarks/docker/: Dockerfile  bench.sh  entrypoint.sh
benchmarks/etl_duckdb/: bench.sh
benchmarks/etl_duckdb_dataframes/: bench.sh
benchmarks/fan_out_500/: bench.sh
benchmarks/fan_out_500_50ms/: bench.sh
benchmarks/incremental_backfill/: bench.sh
benchmarks/large_payloads/: bench.sh
benchmarks/lib/: env.sh
benchmarks/map_reduce/: bench.sh
benchmarks/mixed_io_cpu/: bench.sh
benchmarks/multi_file_discovery/: bench.sh
benchmarks/parallel_tasks/: README.md  bench.sh
benchmarks/partitioned_10k/: Dockerfile
benchmarks/partitioned_chain/: bench.sh
benchmarks/partitioned_etl/: bench.sh
benchmarks/partitioned_fan_in/: bench.sh
benchmarks/perf/: measure.sh  profile.py  results.json
benchmarks/prefect_bench/: bench.py  bench_cold_start.py  bench_concurrent_init.py  bench_server.py  bench_spaceflights.py  bench_trivial.py  pyproject.toml
benchmarks/resilience_pileup/: README.md  bench.sh
benchmarks/scheduler_overhead/: README.md  bench.sh  latency_stats.py  lib.sh
benchmarks/spaceflights/: bench.sh
benchmarks/trivial/: bench.sh
benchmarks/wide_join/: bench.sh
benchmarks/wide_layers/: bench.sh
crates/barca-cli/: Cargo.toml
crates/barca-cli/src/: cache.rs  commands.rs  db.rs  dispatch.rs  display.rs  lib.rs  main.rs
crates/barca-cli/tests/: cli_tests.rs  w1_basic.rs  w2_deps.rs  w3_partitions.rs  w4_iris_pipeline.rs
crates/barca-cli/tests/helpers/: mod.rs
crates/barca-core/: Cargo.toml
crates/barca-core/src/: cache.rs  commands.rs  cone.rs  config.rs  coordinator.rs  cost.rs  dag.rs  db.rs  dispatch.rs  events.rs  executor.rs  hash.rs  hashing.rs  io_loop.rs  lib.rs  model.rs  models.rs  parse.rs  plan.rs  planner.rs  protocol.rs  scheduler.rs  state_sync.rs  work_plan.rs
crates/barca-core/tests/: grammar_spec.rs  socket_stress.rs
crates/barca-py/: Cargo.toml  pyproject.toml
crates/barca-py/python/barca/: __init__.py  batch_worker.py  cli.py  inspect.py  trace.py  worker.py
crates/barca-py/src/: lib.rs
crates/barca-server/: Cargo.toml
crates/barca-server/src/: config.rs  display.rs  error.rs  handlers.rs  lib.rs  main.rs  python_bridge.rs  routes.rs  scheduler.rs  server.rs  snapshot.rs  state.rs  store.rs  templates.rs  watch.rs
crates/barca-server/tests/: api.rs  api_tests.rs
docs/: architecture-decisions.md  architecture.md  benchmarks.md  changelog.md  cli.md  config.md  core-constraints.md  datastar-reference.md  development.md  first-time-ux.md  framework-comparison.md  getting-started.md  guide.md  index.md  open-questions.md  philosophy.md  releases.md  remote-storage.md  server-api.md  templates-architecture.md  test-coverage-roadmap.md  testing.md
docs/api/: decorators.md  models.md  notebook.md
docs/comparisons/: dagster.md  prefect.md
docs/milestones/: 0.1.1.md
docs/patterns/: 01-asset-to-asset.md  02-asset-to-task.md  03-ordering-only-deps.md  04-parallel-tasks.md  05-conditional-execution.md  06-error-handling.md  07-anti-patterns.md
docs/plans/: scheduling-and-long-running-processes.md
docs/workflows/: 01-single-asset-no-inputs.md  02-single-asset-one-input.md  03-parametrized-assets-and-partitions.md  04-asset-continuity-rename-and-move.md  05-schedule-driven-reconciliation-and-effects.md  06-sensors-and-external-observations.md  07-notebook-workflow.md  08-backfill-and-replay.md  09-execution-controls-and-ad-hoc-params.md  10-tasks-and-workflow-management.md
examples/basic_app/: barca.toml  pyproject.toml
examples/basic_app/example_project/: __init__.py  assets.py
examples/iris_pipeline/: README.md  pyproject.toml
examples/iris_pipeline/iris_project/: assets.py
examples/nested_tasks/: barca.toml  pyproject.toml
examples/nested_tasks/nested_project/: __init__.py  assets.py  parallel_test.py
examples/pathological_assets/: barca.toml  pyproject.toml
examples/pathological_assets/pathological_project/: assets.py  helpers.py  sample_data.json
rfcs/: 0000-template.md
scripts/: check-version-sync.sh  test-from-branch.sh
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
specs/: user-api-decisions.md  user-api.allium
tests/: COVERAGE.md  __init__.py  _context.py  _scenarios.py  conftest.py  test_basic.py  test_cache_stability.py  test_cli.py  test_codebase_hash.py  test_collect.py  test_context_smoke.py  test_deps.py  test_dev_integration.py  test_dev_mode.py  test_dynamic_partitions.py  test_effect.py  test_explicit_refresh.py  test_freshness.py  test_interactions.py  test_manual_blocks_downstream.py  test_multicore.py  test_no_cycles.py  test_notebook.py  test_partitions.py  test_prune.py  test_reconciler.py  test_reindex_diff.py  test_run_loop.py  test_run_pass.py  test_scenarios.py  test_schedule.py  test_sensor.py  test_sensor_freshness.py  test_server.py  test_sink.py  test_store_concurrency.py  test_telemetry.py  test_trace.py  test_unsafe_no_cache_kwarg.py
ui/: ARCHITECTURE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+446 files in other folders)
