[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "2965c98cb5b4fbce65aa9a271da1c38b6730ba80" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "2965c98cb5b4fbce65aa9a271da1c38b6730ba80" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "2965c98cb5b4fbce65aa9a271da1c38b6730ba80" }
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
