[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "2965c98cb5b4fbce65aa9a271da1c38b6730ba80" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "2965c98cb5b4fbce65aa9a271da1c38b6730ba80" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "2965c98cb5b4fbce65aa9a271da1c38b6730ba80" }
petgraph = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
dashmap = "6"
notify = "8"
tower = { version = "0.5", features = ["util"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
