[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "barca"
version = "0.1.0"
description = "Invisible asset orchestrator"
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
bindings = "bin"
python-source = "python"
module-name = "barca"
manifest-path = "crates/barca-cli/Cargo.toml"
