[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "barca"
version = "0.2.1"
description = "Invisible asset orchestrator"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/ExSidius/barca"

[project.optional-dependencies]
parquet = ["pyarrow", "pandas"]
fast = ["orjson"]

[tool.maturin]
bindings = "bin"
python-source = "python"
module-name = "barca"
manifest-path = "crates/barca-cli/Cargo.toml"
include = ["LICENSE"]

[tool.ruff]
line-length = 100

[tool.ty.environment]
extra-paths = ["python"]
