[project]
name = "barca-benchmark"
version = "0.1.0"
description = "Benchmark: 500 trivial parallel jobs"
requires-python = ">=3.14"
dependencies = ["barca", "scikit-learn"]

[tool.uv.sources]
barca = { path = "../../packages/barca-core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench_project"]
