[package]
name = "barca-cli"
version = "0.0.2"
edition = "2021"

[lib]
name = "barca_cli"
path = "src/lib.rs"

[[bin]]
name = "barca"
path = "src/main.rs"

[dependencies]
barca-core = { path = "../barca-core" }
barca-server = { path = "../barca-server" }
anyhow = "1.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
serial_test = "3"
tempfile = "3"
