[package]
name = "barca"
version = "0.6.1"
edition = "2024"
description = "Invisible asset orchestrator"

[[bin]]
name = "barca"
path = "src/main.rs"

[dependencies]
barca-core = { path = "../barca-core" }
barca-server = { path = "../barca-server" }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
