[package]
name = "barca-core"
version = "0.1.4"
edition = "2024"
description = "Core library — models, parsing, DAG, execution planning, hashing, dispatch, caching"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
smallvec = { version = "1.13", features = ["serde"] }
tempfile = "3"
turso = { version = "0.7.0-pre.5", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
indicatif = "0.18.4"
