[package]
name = "barca-core"
version = "0.2.1"
edition = "2024"
description = "Core library — models, parsing, DAG, execution planning, hashing, dispatch, caching"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
smallvec = { version = "1.13", features = ["serde"] }
tempfile = "3"
turso = { version = "0.7.0-pre.5", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
futures = "0.3"
indicatif = "0.18.4"
libc = "0.2"
# Optional: TypeScript binding generation (enable with --features ts). Kept out
# of the production binary; used only to regenerate ui/src/lib/generated/.
ts-rs = { version = "12", optional = true }

[features]
# Generate TS type bindings for the frontend. Off by default.
ts = ["dep:ts-rs"]
