[package]
name = "barca-py"
version = "0.0.1"
edition = "2021"

[lib]
name = "_barca"
crate-type = ["cdylib"]

[dependencies]
barca-core = { path = "../barca-core" }
barca-server = { path = "../barca-server" }
pyo3 = { version = "0.25", features = ["extension-module"] }
serde_json = "1.0"
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
