[project]
name = "barca"
version = "0.0.3"
description = "A modern, minimal orchestrator."
requires-python = ">=3.11"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "barca._barca"
data = "data"
