[package]
name = "barca-server"
version = "0.0.1"
edition = "2021"

[dependencies]
barca-core = { path = "../barca-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
datastar = { version = "0.3", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
time = "=0.3.36"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
turso = "0.5.1-pre.1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
axum-test = "16"
tempfile = "3"
tower = "0.5"
