[package]
name = "barca-server"
version = "0.2.1"
edition = "2024"

[dependencies]
barca-core = { path = "../barca-core" }
axum = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
croner = "3.0.1"
chrono = "0.4.45"
chrono-tz = "0.10.4"

[dev-dependencies]
tower = { workspace = true }
tempfile = "3"
