[package]
name = "barca-server"
version = "0.3.0"
edition = "2024"

[dependencies]
barca-core = { path = "../barca-core" }
axum = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tempfile = "3"
