[project]
name = "barca-basic-app"
version = "0.1.0"
description = "Example Barca app for the 0.1.1 vertical slice."
requires-python = ">=3.14"
dependencies = ["barca"]

[tool.uv.sources]
barca = { path = "../../packages/barca" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_project"]
