[project]
name = "barca-basic-app"
version = "0.1.0"
description = "Example Barca app demonstrating assets, tasks, sensors, and partitions."
requires-python = ">=3.14"
dependencies = ["barca"]

# For local development, uncomment the next two lines to use the local build:
# [tool.uv.sources]
# barca = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_project"]
