[project]
name = "iris-pipeline"
version = "0.1.0"
description = "Iris ML pipeline built with Barca."
requires-python = ">=3.11"
dependencies = ["barca", "scikit-learn"]

[tool.uv.sources]
barca = { path = "../../packages/barca-core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iris_project"]
