[project]
name = "iris-pipeline"
version = "0.1.0"
description = "Iris ML pipeline built with Barca."
requires-python = ">=3.14"
dependencies = ["barca", "scikit-learn"]

# For local development, uncomment the next two lines to use the local build:
# [tool.uv.sources]
# barca = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iris_project"]
