[project]
name = "barca-nested-tasks"
version = "0.1.0"
description = "Example Barca app demonstrating nested tasks, after= ordering, and run scoping."
requires-python = ">=3.14"
dependencies = ["barca"]

[tool.uv.sources]
barca = { path = "../../packages/barca", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nested_project"]
