[project]
name = "barca-nested-tasks"
version = "0.1.0"
description = "Example Barca app demonstrating nested tasks and ordering-only deps."
requires-python = ">=3.14"
dependencies = ["barca"]

# For local development, uncomment the next two lines to use the local build:
# [tool.uv.sources]
# barca = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nested_project"]
